--- a/Javajdbc/.classpath
+++ b/Javajdbc/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="img"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_221/jre/lib/ext/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_221/jre/lib/ext/rs2xml.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
