--- a/javabasic/bin/.gitignore
+++ b/javabasic/bin/.gitignore
@@ -1,28 +1,23 @@
 /2019-07-18 note.md
-/practice/
-/제목 없음.png
-/chapter6/
-/chapter7/
-/chapter5/
-/codingalone/
-/classpart/
-/constructor/
-/reference/
-/hiding/
-/chapter4/
-/alone/
-/test/
-/staticex/
-/ArrayTest1/
 /Array1/
-/chapter8/
-/chapter9/
-/Object/
+/ch0/
 /chapter11/
 /chapter15/
-/ch0/
 /chapter2/
 /chapter3/
-/input.txt
+/chapter4/
+/chapter5/
+/chapter7/
+/chapter8/
+/chapter9/
+/classpart/
+/constructor/
+/cooperation/
 /gui/
+/hiding/
 /others/
+/practice/
+/staticex/
+/test/
+/thisex/
+/제목 없음.png
